RESOLVED FIXED280404
testharness.js tests with complex urls do not work when loaded in cross-origin iframes
https://bugs.webkit.org/show_bug.cgi?id=280404
Summary testharness.js tests with complex urls do not work when loaded in cross-origi...
Kimmo Kinnunen
Reported 2024-09-26 06:09:59 PDT
testharness.js tests with complex urls do not work when loaded in cross-origin iframes
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-26 06:10:20 PDT
Kimmo Kinnunen
Comment 2 2024-09-26 06:14:15 PDT
EWS
Comment 3 2024-09-26 13:03:17 PDT
Committed 284307@main (d6da6bd550b3): <https://commits.webkit.org/284307@main> Reviewed commits have been landed. Closing PR #34298 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.