testharness.js tests with complex urls do not work when loaded in cross-origin iframes https://bugs.webkit.org/show_bug.cgi?id=280404 rdar://136749450

Reviewed by Charlie Wolfe and Alex Christensen.

Improve the logic to insert the runInCrossOriginFrame parameter to
the URL in case RWT sends a URL that contains search parameters or
fragments.

* LayoutTests/resources/testharnessreport.js:
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::addQueryParameter):
(WTR::TestInvocation::loadTestInCrossOriginIframe):
(WTR::TestInvocation::dumpWebProcessUnresponsiveness):
(WTR::TestInvocation::dumpResults):
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):
(WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):
(WTR::TestInvocation::runUISideScript):
(WTR::TestInvocation::waitToDumpWatchdogTimerFired):

Canonical link: https://commits.webkit.org/284307@main